// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableToolbarSearch NewTableToolbarSearch rendering renders expected elements 1`] = `
<Search
  className="Table__search"
  id="test"
  onChange={[MockFunction]}
  value="test"
/>
`;

exports[`TableToolbarSearch NewTableToolbarSearch rendering renders expected elements when className is set 1`] = `
<Search
  className="Table__search TestClass"
  id="test"
  onChange={[MockFunction]}
  value="test"
/>
`;

exports[`TableToolbarSearch OldTableToolbarSearch rendering renders expected elements 1`] = `
<Search
  className="Table__search"
  id="test"
  onChange={[Function]}
  value="foo"
/>
`;

exports[`TableToolbarSearch OldTableToolbarSearch rendering renders expected elements when className is set 1`] = `
<Search
  className="Table__search TestClass"
  id="test"
  onChange={[Function]}
  value="foo"
/>
`;

exports[`TableToolbarSearch OldTableToolbarSearch rendering renders expected elements when initialText is set 1`] = `
<Search
  className="Table__search"
  id="test"
  onChange={[Function]}
  value="bar"
/>
`;

exports[`TableToolbarSearch rendering renders expected elements when value is not set 1`] = `
<OldTableToolbarSearch
  onChange={[MockFunction]}
/>
`;

exports[`TableToolbarSearch rendering renders expected elements when value is set 1`] = `
<NewTableToolbarSearch
  onChange={[MockFunction]}
  value="test"
/>
`;
